--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -14,7 +14,7 @@ html, body {
     position: relative;
 
     width: 100%;
-    height: 680px;
+    height: 590px;
 }
 
 .img-sec {
@@ -24,6 +24,27 @@ html, body {
   height: 100%;
   overflow:hidden;
   background-color: #ddd;
+}
+.img-figure {
+  position: absolute;
+
+  width: 520px;
+  height: 350px;
+  margin: 0;
+  padding: 40px;
+
+  background-color: #fff;
+
+  box-sizing: border-box;
+}
+
+figcaption{
+  text-align: center;
+}
+.img-title {
+  margin: 20px 0 0;
+  color: #a7a0a2;
+  font-size: 16px;
 }
 
 .controller-nav {
